--- a/dissertation.bib
+++ b/dissertation.bib
@@ -273,7 +273,6 @@
   doi = {10.1097/01.mlr.0000245454.12228.8f},
   shorttitle = {Do {{Self}}-{{Report Instruments Allow Meaningful Comparisons Across Diverse Population Groups}}?},
   abstract = {Comparative public health research makes wide use of self-report instruments. For example, research identifying and explaining health disparities across demographic strata may seek to understand the health effects of patient attitudes or private behaviors. Such personal attributes are difficult or impossible to observe directly and are often best measured by self-reports. Defensible use of self-reports in quantitative comparative research requires not only that the measured constructs have the same meaning across groups, but also that group comparisons of sample estimates (eg, means and variances) reflect true group differences and are not contaminated by group-specific attributes that are unrelated to the construct of interest. Evidence for these desirable properties of measurement instruments can be established within the confirmatory factor analysis (CFA) framework; a nested hierarchy of hypotheses is tested that addresses the cross-group invariance of the instrument’s psychometric properties. By name, these hypotheses include configural, metric (or pattern), strong (or scalar), and strict factorial invariance. The CFA model and each of these hypotheses are described in nontechnical language. A worked example and technical appendices are included.},
-  issue = {11 Suppl 3},
   journaltitle = {Medical care},
   shortjournal = {Med Care},
   urldate = {2013-05-17},
@@ -767,7 +766,7 @@ There are epistemological difficulties in this theory. Risk, the brain, and adol
   date = {2006-11-01},
   pages = {607-627},
   keywords = {_tablet},
-  author = {de Bruyn, E. H. and Cillessen, A. H. N.},
+  author = {de Bruyn, Eddy H. and Cillessen, Antonius H.N.},
   options = {useprefix=true},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/S86QGKJ5/de_Bruyn_Cillessen-2006-Popularity_in_Early_Adolescence.pdf}
 }
@@ -1105,13 +1104,11 @@ There are epistemological difficulties in this theory. Risk, the brain, and adol
   title = {More than {{Myth}}: {{The Developmental Significance}} of {{Romantic Relationships During Adolescence}}},
   volume = {13},
   issn = {10508392},
-  url = {http://search.ebscohost.com/login.aspx?direct=true&db=pbh&AN=9079535&site=ehost-live},
   shorttitle = {More than {{Myth}}},
   abstract = {Adolescents’ romantic relationships have attracted popular interest, but, until recently, little scientific curiosity. Research has been impeded by erroneous assumptions that adolescent relationships are trivial and transitory, that they provide little information beyond measures of the influence of parent–child and peer relationships, and that their impact is primarily associated with problems of behavior and adjustment. This article proposes that distinguishing five features of romantic relationships (involvement, partner selection, relationship content, quality, and cognitive and emotional processes) is essential to describing adolescents’ relationships and their developmental significance. These distinctions also help to clarify the role of context, age–related variations, and individual differences in the impact of romantic experiences. Research is needed to illuminate questions of how and under what conditions romantic relationships affect individual development and how romantic and other close relationships jointly influence developmental trajectories during adolescence.},
   number = {1},
-  journaltitle = {Journal of Research on Adolescence (Wiley-Blackwell)},
-  shortjournal = {Journal of Research on Adolescence (Wiley-Blackwell)},
-  urldate = {2015-10-22},
+  journaltitle = {Journal of Research on Adolescence},
+  shortjournal = {Journal of Research on Adolescence},
   date = {2003-03},
   pages = {1-24},
   keywords = {Interpersonal Relations,teenagers},
@@ -1752,7 +1749,6 @@ Sexuality emerges as a major developmental element of puberty and the adolescent
   shorttitle = {Beyond Simple Models of Adolescence to an Integrated Circuit-Based Account},
   journaltitle = {Developmental Cognitive Neuroscience},
   shortjournal = {Developmental Cognitive Neuroscience},
-  series = {Special Section: The Developmental Neuroscience of Adolescence: Revisiting, Refining, and Extending Seminal Models},
   urldate = {2016-01-28},
   date = {2016-02},
   pages = {128-130},
@@ -2534,23 +2530,6 @@ To prevent increases in substance use in emerging adulthood, interventions shoul
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/IPURPHMB/Morse_et_al-2015-Renovating_Situation_Taxonomies.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/S79IGMTF/full.html}
 }
 
-@article{collins_how_2012,
-  langid = {english},
-  title = {How Much of Reinforcement Learning Is Working Memory, Not Reinforcement Learning? {{A}} Behavioral, Computational, and Neurogenetic Analysis: {{Working}} Memory in Reinforcement Learning},
-  volume = {35},
-  issn = {0953816X},
-  url = {http://doi.wiley.com/10.1111/j.1460-9568.2011.07980.x},
-  doi = {10.1111/j.1460-9568.2011.07980.x},
-  shorttitle = {How Much of Reinforcement Learning Is Working Memory, Not Reinforcement Learning?},
-  number = {7},
-  journaltitle = {European Journal of Neuroscience},
-  urldate = {2016-06-01},
-  date = {2012-04},
-  pages = {1024-1035},
-  author = {Collins, Anne G. E. and Frank, Michael J.},
-  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/HCNRXKH5/CollinsFrank_WMRL.pdf}
-}
-
 @article{defoe2015,
   langid = {english},
   title = {A Meta-Analysis on Age Differences in Risky Decision Making: {{Adolescents}} versus Children and Adults.},
@@ -2584,10 +2563,7 @@ To prevent increases in substance use in emerging adulthood, interventions shoul
   pages = {25-51},
   keywords = {_tablet},
   author = {Brumbach, Barbara Hagenah and Figueredo, Aurelio José and Ellis, Bruce J.},
-  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/2IIH7IVQ/Brumbach_et_al-2009-Effects_of_Harsh_and_Unpredictable_Environments_in_Adolescence_on_Development.pdf},
-  eprinttype = {pmid},
-  eprint = {20634914},
-  pmcid = {PMC2903759}
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/2IIH7IVQ/Brumbach_et_al-2009-Effects_of_Harsh_and_Unpredictable_Environments_in_Adolescence_on_Development.pdf}
 }
 
 @article{westfall2016,
@@ -3920,10 +3896,9 @@ The results are important because they suggest that by targeting depressive symp
   number = {6},
   journaltitle = {Journal of Adolescence},
   shortjournal = {Journal of Adolescence},
-  series = {Special Issue: New methodological directions for the study of adolescent competence and adaptation},
   date = {2006-12-01},
   pages = {935-959},
-  keywords = {peer relations,popularity,Growth curve modelling},
+  keywords = {Growth curve modelling,peer relations,popularity},
   author = {Cillessen, Antonius H. N. and Borch, Casey},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/DDR86W73/Cillessen_Borch-2006-Developmental_trajectories_of_adolescent_popularity.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/7REBW6ZT/S0140197106000522.html}
 }
@@ -4082,11 +4057,11 @@ The results are important because they suggest that by targeting depressive symp
   shorttitle = {Constructing a {{Sexual Self}}},
   abstract = {This study examined the constructions of sexuality among a sample of 470 adolescent high schoolers in Grades 10-12. Using cluster analysis, five different sexual styles were identified: Sexually Naive, Sexually Unassured, Sexually Competent, Sexually Adventurous, and Sexually Driven. These styles were characterized by differences in gender, age, and virginity status. The styles, however, were not simply delineated along demographic lines, indicating the efficacy of examining patterns of sexual self characteristics rather than single variables to explore adolescent sexuality. The sexual styles also differed in their levels of sexual risk-taking with both casual and regular partners, number of sexual partners in the last 6 months, and number of "one-night-stands." These differences were coherent with the sexual styles and thus offers both concurrent validity for the styles and an indication that these styles may be associated with sexual behavior. To understand adolescent sexual behavior and sexual risk-taking, it is essential to consider the ways in which young people construct a sense of themselves as sexual beings.},
   number = {4},
-  journaltitle = {Journal of Research on Adolescence (Lawrence Erlbaum)},
+  journaltitle = {Journal of Research on Adolescence},
   shortjournal = {Journal of Research on Adolescence (Lawrence Erlbaum)},
   date = {1996-10},
   pages = {489-513},
-  keywords = {self-perception,HIGH school students,YOUTHS' sexual behavior,TEENAGERS' sexual behavior,HUMAN sexuality,VIRGINITY},
+  keywords = {HIGH school students,HUMAN sexuality,self-perception,TEENAGERS' sexual behavior,VIRGINITY,YOUTHS' sexual behavior},
   author = {Buzwell, Simone and Rosenthal, Doreen},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/PD2G4ED2/Simone_Buzwell_Rosenthal-1996-Constructing_a_Sexual_Self.pdf}
 }
@@ -4629,14 +4604,13 @@ stimulus-as-fixed-effect fallacy is that the majority of published fMRI studies 
   doi = {10.1016/j.dcn.2016.12.007},
   shorttitle = {Beyond Dual Systems},
   abstract = {The dual systems model posits that adolescent risk-taking results from an imbalance between a cognitive control system and an incentive processing system. Researchers interested in understanding the development of adolescent risk-taking use a diverse array of behavioral and self-report measures to index cognitive control and incentive processing. It is currently unclear whether different measures commonly interpreted as indicators of the same psychological construct do, in fact, tap the same underlying dimension of individual differences. In a diverse sample of 810 adolescent twins and triplets (M age=15.9years, SD=1.4years) from the Texas Twin Project, we investigated the factor structure of fifteen self-report and task-based measures relevant to adolescent risk-taking. These measures can be organized into four factors, which we labeled premeditation, fearlessness, cognitive dyscontrol, and reward seeking. Most behavioral measures contained large amounts of task-specific variance; however, most genetic variance in each measure was shared with other measures of the corresponding factor. Behavior genetic analyses further indicated that genetic influences on cognitive dyscontrol overlapped nearly perfectly with genetic influences on IQ (rA=−0.91). These findings underscore the limitations of using single laboratory tasks in isolation, and indicate that the study of adolescent risk taking will benefit from applying multimethod approaches.},
-  issue = {Supplement C},
   journaltitle = {Developmental Cognitive Neuroscience},
   shortjournal = {Developmental Cognitive Neuroscience},
   series = {Sensitive periods across development},
   urldate = {2018-01-08},
   date = {2017-06-01},
   pages = {221-234},
-  keywords = {Adolescence,Delay discounting,Impulsivity,Risk-taking,cognitive control,intelligence,self-control,Intelligence,Dual systems,_tablet,Reward seeking,Cognitive control,Self-control},
+  keywords = {_tablet,Adolescence,cognitive control,Cognitive control,Delay discounting,Dual systems,Impulsivity,intelligence,Intelligence,Reward seeking,Risk-taking,self-control,Self-control},
   author = {Harden, K. Paige and Kretsch, Natalie and Mann, Frank D. and Herzhoff, Kathrin and Tackett, Jennifer L. and Steinberg, Laurence and Tucker-Drob, Elliot M.},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/F6MBF74J/Harden et al. - 2017 - Beyond dual systems A genetically-informed, laten.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/VN6G8J5K/Harden et al. - 2017 - Beyond dual systems A genetically-informed, laten.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/WBVIXCBA/Harden_et_al-2017-Beyond_dual_systems.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/665XUBHQ/S1878929316300251.html;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/A4JYTM9N/S1878929316300251.html;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/Q9QXURCM/S1878929316300251.html;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/QMWM5VLQ/S1878929316300251.html}
 }
@@ -4649,14 +4623,13 @@ stimulus-as-fixed-effect fallacy is that the majority of published fMRI studies 
   doi = {10.1016/j.dcn.2016.09.004},
   shorttitle = {Becoming a Sexual Being},
   abstract = {The onset of adolescence is a time of profound changes in motivation, cognition, behavior, and social relationships. Existing neurodevelopmental models have integrated our current understanding of adolescent brain development; however, there has been surprisingly little focus on the importance of adolescence as a sensitive period for romantic and sexual development. As young people enter adolescence, one of their primary tasks is to gain knowledge and experience that will allow them to take on the social roles of adults, including engaging in romantic and sexual relationships. By reviewing the relevant human and animal neurodevelopmental literature, this paper highlights how we should move beyond thinking of puberty as simply a set of somatic changes that are critical for physical reproductive maturation. Rather, puberty also involves a set of neurobiological changes that are critical for the social, emotional, and cognitive maturation necessary for reproductive success. The primary goal of this paper is to broaden the research base and dialogue about adolescent romantic and sexual development, in hopes of advancing understanding of sex and romance as important developmental dimensions of health and well-being in adolescence.},
-  issue = {Supplement C},
   journaltitle = {Developmental Cognitive Neuroscience},
   shortjournal = {Developmental Cognitive Neuroscience},
   series = {Sensitive periods across development},
   urldate = {2018-01-05},
   date = {2017-06-01},
   pages = {209-220},
-  keywords = {Adolescence,puberty,Developmental neuroscience,sexual development,developmental neuroscience,romantic development,_tablet,Puberty,Romantic development,Sexual development},
+  keywords = {_tablet,Adolescence,developmental neuroscience,Developmental neuroscience,puberty,Puberty,romantic development,Romantic development,sexual development,Sexual development},
   author = {Suleiman, Ahna Ballonoff and Galván, Adriana and Harden, K. Paige and Dahl, Ronald E.},
   file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/DVG4GBPG/Suleiman_et_al-2016-Becoming_a_sexual_being.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/VKM86DJF/S1878929316300779.html;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/XNKRVPP8/S1878929316300779.html}
 }
@@ -5303,7 +5276,6 @@ CONCLUSIONS: These findings indicate that the emotional sequelae of puberty exte
   url = {https://insights.ovid.com/crossref?an=00005650-200611001-00023},
   doi = {10.1097/01.mlr.0000245143.08679.cc},
   shorttitle = {When {{Does Measurement Invariance Matter}}?},
-  issue = {Suppl 3},
   journaltitle = {Medical Care},
   urldate = {2018-04-13},
   date = {2006-11},
@@ -6763,7 +6735,7 @@ Adolescents are notorious for engaging in reward-seeking behaviors, a tendency a
   date = {2012-04},
   pages = {1024-1035},
   author = {Collins, Anne G. E. and Frank, Michael J.},
-  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/LS53SU4J/Collins and Frank - 2012 - How much of reinforcement learning is working memo.pdf}
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/HCNRXKH5/CollinsFrank_WMRL.pdf;/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/LS53SU4J/Collins and Frank - 2012 - How much of reinforcement learning is working memo.pdf}
 }
 
 @article{collins2017b,
@@ -7117,7 +7089,7 @@ CONCLUSIONS: Computational approaches allow us to disentangle contributions of m
   title = {Youth {{Risk Behavior Survey Questionnaire}}},
   url = {www.cdc.gov/yrbs},
   date = {2015},
-  author = {Centers for Disease Control {and} Prevention}
+  author = {{Centers for Disease Control and Prevention}}
 }
 
 @article{mallett2009,
@@ -7276,10 +7248,7 @@ These results demonstrate a need for sexual education programs and policy to be 
   date = {2009-08},
   pages = {158-162},
   author = {Cavazos-Rehg, Patricia A. and Krauss, Melissa J. and Spitznagel, Edward L. and Schootman, Mario and Bucholz, Kathleen K. and Peipert, Jeffrey F. and Sanders-Thompson, Vetta and Cottler, Linda B. and Bierut, Laura Jean},
-  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/4ITLGWDL/Cavazos-Rehg et al. - 2009 - Age of sexual debut among US adolescents.pdf},
-  eprinttype = {pmid},
-  eprint = {19631791},
-  pmcid = {PMC3064497}
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/4ITLGWDL/Cavazos-Rehg et al. - 2009 - Age of sexual debut among US adolescents.pdf}
 }
 
 
