--- a/cv.tex
+++ b/cv.tex
@@ -1,23 +1,20 @@
 \school{University of Oregon, Eugene, OR, USA}
-\school{University of San Francisco, San Francisco, CA, USA}
+\school{University of California, Berkeley, CA, USA}
 
-\degree{Doctor of Philosophy, Psychology, 2016, University of Oregon}
-\degree{Master of Science, Psychology, 2012, University of Oregon}
-\degree{Bachelor of Arts, Psychology, 2010, University of San Francisco}
+\degree{Doctor of Philosophy, Psychology, 2018, University of Oregon}
+\degree{Master of Science, Psychology, 2014, University of Oregon}
+\degree{Bachelor of Arts, Cognitive Science, 2004, University of California, Berkeley}
 
 \interests{Interest 1}
 \interests{Interest 2}
 \interests{Interest 3}
 
-\position{Instructor, Data Carpentry, 2016}
-\position{Graduate Affiliate, Digital Scholarship Center, University of Oregon, 2014-2016}
-\position{Workshop Instructor (Archival Book Digitization, Scientific Programming in R, Scientific Programming with Version Control), Digital Scholarship Center and Department of Psychology, University of Oregon, 2015-2016}
-\position{Instructor, Software Carpentry, 2014-2016}
+\position{Graduate Research/Teaching Fellow, University of Oregon, 2012–Present}
+\position{Research Coordinator, Stanford University School of Medicine, 2009–2012}
 \position{} % extra empty position is neccessary 
 
-\award{Gregores Graduate Research Award, University of Oregon, 2013}
-\award{Graduate School Research Award, University of Oregon, 2012}
-\award{Marthe E. Smith Memorial Science Fellowship, University of Oregon, 2012}
+\award{Gary E. Smith Summer Professional Development Award, University of Oregon, 2015}
+\award{Clarence and Lucille Dunbar Scholarship, University of Oregon, 2014}
 \award{} % extra empty award is neccessary 
 
 % Example publications:
